--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,17 @@ left:0;
 -moz-perspective: 600;
 -webkit-perspective: 600;
 }
+
+.promo_panel .back h4 { 
+text-transform:uppercase;
+font-size:280%;
+margin-top:-6px;
+}
+.promo_panel .back p { 
+margin:0 0 2px 10px;
+line-height:1.3;
+width:80%;
+}
 .promo_panel img {
 height:100%;
 width:100%;
@@ -140,6 +151,13 @@ width:100%;
 .panel_1 {
 height:365px;
 width:152px;
+}
+.panel_1 .back h4 {
+font-size:400%;
+margin-top:-8px;
+}
+.panel_1 .back p {
+font-size:120%;
 }
 .panel_2 {
 height:88px;
@@ -151,11 +169,25 @@ height:271px;
 left:158px;
 width:462px;
 }
+.panel_3 .back h4 {
+font-size:500%;
+margin-top:-10px;
+}
+.panel_3 .back p {
+font-size:140%;
+}
 .panel_4 {
 height:182px;
 left:158px;
 top:277px;
 width:277px;
+}
+.panel_4 .back h4 {
+font-size:400%;
+margin-top:-8px;
+}
+.panel_4 .back p {
+font-size:120%;
 }
 .panel_5 {
 height:88px;
@@ -174,11 +206,25 @@ height:85px;
 left:626px;
 width:152px;
 }
+.panel_7 .back h4 {
+font-size:200%;
+margin-top:-4px;
+}
+.panel_7 .back p {
+font-size:90%;
+}
 .panel_8 {
 height:367px;
 left:626px;
 top:91px;
 width:152px;
+}
+.panel_8 .back h4 {
+font-size:400%;
+margin-top:-8px;
+}
+.panel_8 .back p {
+font-size:120%;
 }
 
 
@@ -217,43 +263,9 @@ color:#fff;
 transition: all .4s ease-in-out;
 overflow:hidden;
 }
-.promo_panel .back h4 { 
-text-transform:uppercase;
-font-size:280%;
-margin-top:-6px;
-}
-.grid.xl .promo_panel .back h4 {
-font-size:600%;
-margin-top:-14px;
-}
-.grid.large .promo_panel .back h4 {
-font-size:400%;
-margin-top:-8px;
-}
-.grid.small .promo_panel .back h4 {
-font-size:200%;
-margin-top:-4px;
-}
-.promo_panel .back p { 
-margin:0 0 2px 10px;
-line-height:1.3;
-width:80%;
-}
 .promo_panel .back a { 
 color:#fff;
 text-decoration:none;
-}
-.grid.xl .promo_panel .back p {
-font-size:160%;
-margin:0 0 6px 20px;
-}
-.grid.large .promo_panel .back p {
-font-size:130%;
-margin:0 0 3px 14px;
-}
-.grid.small .promo_panel .back p {
-font-size:85%;
-margin:0 0 2px 10px;
 }
 .promo_panel .circle, .work_item .circle { 
 background:#c97a7a;
@@ -795,6 +807,7 @@ width:465px;
 top:0;
 left:0;
 }
+
 .small .panel_3 {
 height:221px;
 width:450px;
@@ -838,6 +851,13 @@ height:76px;
 left:135px;
 top:538px;
 width:154px;
+} 
+.small .panel_5 .back h4,.small .panel_1 .back h4,.small .panel_6 .back h4, .small .panel_2 .back h4 {
+font-size:200%;
+margin-top:-4px;
+}
+.small .panel_5 .back p, .small .panel_1.back p, .small .panel_6.back p, .small .panel_2 .back p {
+font-size:90%;
 }
 
 
@@ -1039,24 +1059,30 @@ height:89px;
 top:298px;
 width:178px;
 }
-.mini .grid.xl .promo_panel, .mini .grid.xl .promo_panel img {
-height:155px;
-width:282px;
-}
-.mini .grid.large .promo_panel, .mini .grid.medium .promo_panel, .mini .grid.large .promo_panel img, .mini .grid.medium .promo_panel img {
-height:72px;
-width:132px;
-}
-.mini .grid.medium .promo_panel {
-margin:0px 5px;
-}
-.mini .grid.medium .promo_panel .back h4, .mini .grid.large .promo_panel .back h4 {
-font-size:180%;
+.mini .promo_panel .back h4 {
+font-size:200%;
 margin-top:-4px;
 }
-.mini .grid.medium .promo_panel .back p, .mini .grid.large .promo_panel .back p {
+.mini .panel_2 .back h4 {
+margin-top:2px;
+}
+.mini .promo_panel .back p {
 font-size:90%;
-margin:0 0 3px 14px;
+}
+
+.mini .panel_3 .back h4 {
+font-size:400%;
+margin-top:-8px;
+}
+.mini .panel_3 .back p {
+font-size:120%;
+}
+.mini .panel_1 .back h4 {
+font-size:140%;
+margin-top:0px;
+}
+.mini .panel_1 .back p {
+font-size:80%;
 }
 .mini .grid.large .promo_panel .circle {
 border-radius:28px;
