Added margin underneath thumbs

--- a/css/screening_room.css
+++ b/css/screening_room.css
@@ -60,7 +60,7 @@ list-style:none;
 border:6px solid #fff;
 float:left;
 height:120px;
-margin:0 15px 0 0;
+margin:0 15px 15px 0;
 overflow:hidden;
 position:relative;
 width:212px;
